# computerGraphicsFromScratch

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE
.devcontainer/: devcontainer.json.template
samples/: CMakeLists.txt  opencv.cpp  opengl.cpp
src/: canvas.cpp  canvas.h  main.cpp  object.h  traceRay.cpp  traceRay.h
